samples/_failures_safe/1761311394_f54555_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_13ea4b2d.c: In function ‘tokenize’:
./samples/SAFE/__tmp_13ea4b2d.c:164:9: error: expected expression at end of input
  164 |         if (isalpha(c) || c == '_')
      |         ^~
./samples/SAFE/__tmp_13ea4b2d.c:164:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_13ea4b2d.c:164:9: error: expected declaration or statement at end of input
